# Ant-Debiased-Causal-Tree

./: README.md  requirements.txt
config/: gbct.conf  hist.conf  synth_binary.conf  tree.conf
data/binary_var_0.5/: synthetic.conf
examples/: train.ipynb
src/: aggregate.py  bin.py  bin_test.py  boosting.py  cppnode.py  cppnode_test.py  dataset.py  did_node.py  gradient_did_tree.py  histogram.py  information.py  losses.py  reflect_utils.py  sim_dataset.py  tr_te.py
third_part/gbct_utils/: CMakeLists.txt  setup.py
third_part/gbct_utils/include/: agg_fn.h  bin.h  did_utils.h  gbct_bin.h  gbct_utils.h  meta.h  predict.h  utils.h
third_part/gbct_utils/include/utils/: array_args.h  common.h  common_legacy_solaris.h  file_io.h  log.h  nparray_ops.hpp  openmp_wrapper.h  pipeline_reader.h  random.h  text_reader.h  threading.h
third_part/gbct_utils/python/: aggrate.py  aggrate_test.py  loss.py  loss_test.py
third_part/gbct_utils/src/: bin.cpp  causal_tree_node.cpp  dense_bin.cpp  dense_bin.hpp  gbct_utils.cpp  multi_val_dense_bin.cpp  multi_val_dense_bin.hpp  multi_val_sparse_bin.cpp  multi_val_sparse_bin.hpp  sparse_bin.cpp  sparse_bin.hpp
